--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,8 @@
 twig:
-    file_name_pattern: '*.twig'
+  form_themes:
+    - 'bootstrap_5_layout.html.twig'
+  file_name_pattern: '*.twig'
 
 when@test:
-    twig:
-        strict_variables: true
+  twig:
+    strict_variables: true
