--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       db:
-        image: postgres:13
+        image: postgres
         env:
           POSTGRES_USER: customizer
           POSTGRES_PASSWORD: customizer
