--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,6 @@ jobs:
       -   run: yarn run dev
       -   run: vendor/bin/phpunit
 
-
   ecs:
     runs-on: ubuntu-latest
     steps:
@@ -41,7 +40,7 @@ jobs:
       -   uses: shivammathur/setup-php@v2
           with:
             php-version: 8.2
-            coverage: none # default is xdebug
+            coverage: none
 
       -   run: composer install --dev --no-progress
       -   run: composer run-script check-cs
