--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,17 @@
 controllers:
     resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+        path: ../src/Controller/Controller
+        namespace: App\Controller\Controller
     type: attribute
+
+api_controllers:
+    resource:
+        path: ../src/Controller/ApiController/
+        namespace: App\Controller\ApiController
+    type: attribute
+    prefix: /api/v1
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
