--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,3 +8,9 @@ api:
         path: ../src/Controller/Api
         namespace: App\Controller\Api
     type: attribute
+    prefix: /api/v1
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
