--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "doctrine/doctrine-bundle": "^2.13",
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.3",
+    "natxet/cssmin": "^3.0",
     "nelmio/api-doc-bundle": "^4.33",
     "nesbot/carbon": "^3.8",
     "nette/utils": "*",
