--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "nelmio/cors-bundle": "^2.5",
     "nesbot/carbon": "^3.8",
     "nette/utils": "*",
+    "nyholm/psr7": "^1.8",
     "phpdocumentor/reflection-docblock": "^5.4",
     "phpstan/phpdoc-parser": "^1.33",
     "scssphp/scssphp": "^1.13",
@@ -53,6 +54,7 @@
     "symfony/web-link": "7.1.*",
     "symfony/webpack-encore-bundle": "^2.2",
     "symfony/yaml": "7.1.*",
+    "theodo-group/llphant": "^0.8.8",
     "twig/extra-bundle": "^2.12|^3.0",
     "twig/twig": "^2.12|^3.0"
   },
