--- a/.env
+++ b/.env
@@ -40,6 +40,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
+AXIOS_BASE_URL=https://customizer.site
+
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
