--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@stimulus-components/color-picker": "^2.0.0",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
         "buffer": "^6.0.3",
         "clean-css": "^5.3.3",
         "json-sass": "^1.3.5",
