--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "doctrine/doctrine-bundle": "^2.13",
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.3",
-    "natxet/cssmin": "^3.0",
+    "mrclay/minify": "^4.0",
     "nelmio/api-doc-bundle": "^4.33",
     "nelmio/cors-bundle": "^2.5",
     "nesbot/carbon": "^3.8",
