--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "nette/utils": "*",
     "phpdocumentor/reflection-docblock": "^5.4",
     "phpstan/phpdoc-parser": "^1.33",
+    "scssphp/scssphp": "^1.13",
     "symfony/asset": "7.1.*",
     "symfony/asset-mapper": "7.1.*",
     "symfony/console": "7.1.*",
