--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "doctrine/doctrine-bundle": "^2.13",
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.3",
+    "lexik/jwt-authentication-bundle": "^3.1",
     "mrclay/minify": "^4.0",
     "nelmio/api-doc-bundle": "^4.33",
     "nelmio/cors-bundle": "^2.5",
@@ -34,6 +35,7 @@
     "symfony/mime": "7.1.*",
     "symfony/monolog-bundle": "^3.0",
     "symfony/notifier": "7.1.*",
+    "symfony/password-hasher": "7.1.*",
     "symfony/process": "7.1.*",
     "symfony/property-access": "7.1.*",
     "symfony/property-info": "7.1.*",
