--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,13 +6,17 @@ security:
     providers:
         users_in_memory: { memory: null }
     firewalls:
+        api:
+            pattern: ^/api
+            stateless: true
+            custom_authenticators:
+                - App\Security\TokenAuthenticator
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
             provider: users_in_memory
-
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
