--- a/.env
+++ b/.env
@@ -55,3 +55,5 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
+
+OPENAI_API_KEY=
