--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "phpdocumentor/reflection-docblock": "^5.4",
     "phpstan/phpdoc-parser": "^1.33",
     "scssphp/scssphp": "^1.13",
+    "stripe/stripe-php": "^16.3",
     "symfony/asset": "7.1.*",
     "symfony/asset-mapper": "7.1.*",
     "symfony/console": "7.1.*",
