--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@popperjs/core": "^2.11.8",
         "@stimulus-components/color-picker": "^2.0.0",
+        "@stripe/stripe-js": "^5.2.0",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
