--- a/.env
+++ b/.env
@@ -47,7 +47,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> mailer ###
-MAILER_DSN=sendmail://default
+MAILER_DSN=smtp://mailer:1025
 ###< mailer ###
 
 ###> lexik/jwt-authentication-bundle ###
@@ -57,3 +57,5 @@ JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
 
 OPENAI_API_KEY=
+STRIPE_PUBLIC_KEY=
+STRIPE_PRIVATE_KEY=
