--- a/.deployment/docker-compose.production-template.yml
+++ b/.deployment/docker-compose.production-template.yml
@@ -20,6 +20,9 @@ services:
       MAILER_DSN: "__CUSTOMIZER_MAILER_DSN__"
       MESSENGER_TRANSPORT_DSN: "__CUSTOMIZER_MESSENGER_TRANSPORT_DSN__"
       APP_TIMEZONE: "__CUSTOMIZER_APP_TIMEZONE__"
+      CORS_ALLOW_ORIGIN: "__CUSTOMIZER_CORS_ALLOW_ORIGIN__"
+      STRIPE_PUBLIC_KEY: "__CUSTOMIZER_STRIPE_PUBLIC_KEY__"
+      STRIPE_PRIVATE_KEY: "__CUSTOMIZER_STRIPE_PRIVATE_KEY__"
     networks:
       - internal
 
